
  * Backport to Precise.
    - Lossen debhelper dependency. Restore -dbg package.
    - Remove use of dh-autoreconf and remove automake dependency. Remove
      patches modifying the build system, not needed in our case.
    - Remove libidn support. Building with an older version is not secure.
    - Remove guile support.
    - Remove PCKS#11 support.

 -- Vincent Bernat <bernat@debian.org>  Thu, 14 Apr 2016 19:44:56 +0200

gnutls28 (3.4.10-4ubuntu1) xenial; urgency=medium

  * Merge with Debian; remaining changes:
    - Make gnutls28 default.
    - debian/patches/disable_global_init_override_test.patch: disable failing
      test.

 -- Matthias Klose <doko@ubuntu.com>  Mon, 21 Mar 2016 14:53:18 +0100

gnutls28 (3.4.10-4) unstable; urgency=medium

  * 43_fix_cpucapoverride.diff by Nikos Mavrogiannopoulos: Fix
    GNUTLS_CPUID_OVERRIDE function, stopping it from enabling SSE3 when it is
    unavailable. Closes: #818341

 -- Andreas Metzler <ametzler@debian.org>  Thu, 17 Mar 2016 19:41:22 +0100

gnutls28 (3.4.10-3) unstable; urgency=medium

  * Upload to unstable.

 -- Andreas Metzler <ametzler@debian.org>  Mon, 14 Mar 2016 18:29:53 +0100

gnutls28 (3.4.10-2) experimental; urgency=medium

  * Simplify override_dh_auto_test target. (Thanks, Steven Chamberlain)
  * Add debian/patches/42_mini-loss-time-improved-timeout-detection.patch,
    another try for Closes: #813598

 -- Andreas Metzler <ametzler@debian.org>  Mon, 07 Mar 2016 19:22:57 +0100

gnutls28 (3.4.10-1) experimental; urgency=medium

  * Pull 40_src-added-systemkey-args-to-BUILT_SOURCES.patch from upstream GIT
    master to fix FTBFS with parallel builds. Closes: #816148
  * New upstream version.
  * Pull 41_tests-mini-loss-time-ensure-client-timeouts.diff from upstream
    master branch to fix occasional testsuite error. Closes: #813598

 -- Andreas Metzler <ametzler@debian.org>  Sat, 05 Mar 2016 08:45:52 +0100

gnutls28 (3.4.9-2ubuntu1) xenial; urgency=medium

  * Merge with Debian; remaining changes: