@@ -7,6 +7,8 @@ gnutls28 (3.4.10-4ubuntu1~precise0+exo1) precise; urgency=medium
     - Remove libidn support. Building with an older version is not secure.
     - Remove guile support.
     - Remove PCKS#11 support.
+    - Loosen dependency on autogen, not needed if we don't care about
+      reproducibility.
 
  -- Vincent Bernat <bernat@debian.org>  Thu, 14 Apr 2016 19:44:56 +0200
 
